<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

    <ImageView
        android:id="@+id/takeaction_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_120"/>

    <TextView
        android:id="@+id/takeaction_volunteer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeaction_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:text="@string/take_action_volunteer"/>

    <TextView
        android:id="@+id/takeaction_volunteer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/takeaction_volunteer_header"
        android:textSize="18sp"
        android:text="@string/take_action_volunteer_text"/>

    <Button
        android:id="@+id/takeaction_volunteer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/volunteer_button_selector"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/white"
        android:layout_below="@id/takeaction_volunteer_text"
        android:textSize="20sp"
        android:text="@string/volunteer_match"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/text_primary"
        android:text="@string/take_action_nonprofit_text"/>
</RelativeLayout>