<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_corners_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feeddialog_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/share_with_fb"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_disabled"/>

        <TextView
            android:id="@+id/feeddialog_comments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/show_comments"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/feeddialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners_white"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>