<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ListView 
        android:id="@+id/listRestaurants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        tools:listitem="@layout/list_row"
        android:layout_above="@+id/linearLayout1">
        
    </ListView>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/buttonLegend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bottom_buttons"
        android:clickable="true"
        android:drawableTop="@drawable/map_legend_icon2x"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingTop="10dp"
        android:text="@string/string_legend"
        android:textColor="@android:color/white" />
    
    <View android:layout_height="fill_parent"
    android:layout_width="1dp"
    android:background="@android:color/black"/>

    <Button
        android:id="@+id/buttonAddListing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bottom_buttons"
        android:clickable="true"
        android:drawableTop="@drawable/map_add_icon2x"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingTop="10dp"
        android:text="@string/add_listing"
        android:textColor="@android:color/white" />
    
    <View android:layout_height="fill_parent"
    android:layout_width="1dp"
    android:background="@android:color/black"/>

    <Button
        android:id="@+id/buttonLearn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bottom_buttons"
        android:clickable="true"
        android:drawableTop="@drawable/map_learn_icon2x"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingTop="10dp"
        android:text="@string/string_learn"
        android:textColor="@android:color/white" />

</LinearLayout>

    <EditText
        android:id="@+id/SearchEditText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:imeOptions="actionSearch" 
    	android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="Search for a restaurant"
        android:paddingLeft="10dp"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

</RelativeLayout>